<resources>
    <string name="app_name">YU Market For Owners</string>
    <string name="item_manage">상품 관리</string>
    <string name="order_list">주문 목록</string>
    <string name="review_manage">리뷰 관리</string>
    <string name="chatting_manage">채팅 관리</string>
    <string name="market_manage">마켓 관리</string>
    <string name="edit_item">상품 수정</string>
    <string name="item_stock">재고 수량</string>
    <string name="order_id">주문번호</string>
    <string name="delivery_type">이용방법</string>
    <string name="order_time">주문일시</string>
    <string name="order_telephone">주문자</string>
    <string name="accept_order">주문 접수</string>
    <string name="reject_order">거절</string>
    <string name="delivery_done">상품전달 완료</string>
    <string name="order_item_image_description">주문한 상품의 이미지</string>
    <string name="total_price_format"><b>%1$d x ₩%2$,d</b></string>
    <string name="price_format"><b>₩%1$,d</b></string>
    <string name="item_edit_button_description">상품 수정 버튼</string>
    <string name="review_customer_profile_image_description">소비자 프로필 이미지</string>
    <string name="long_review_example">review content review content review content review content review content review content review content</string>
    <string name="reply">답글</string>
    <string name="order_item">구매 상품</string>
    <string name="long_item_name_example">long order item long order item long order item long order item</string>
    <string name="chat_room_opponent_profile_image_description">채팅방의 상대방 사진</string>
    <string name="chat_room_remove_button_description">채팅방 삭제 버튼</string>
    <string name="edit_market">마켓 정보 수정</string>
    <string name="manage_schedule">일정 관리</string>
    <string name="manage_review">리뷰 관리</string>
    <string name="market_manage_name_format"><b>%1$s</b> %2$s 사장님</string>
    <string name="notice">공지사항</string>
    <string name="notice_icon_description">공지 사항 아이콘</string>
    <string name="service_center">고객센터</string>
    <string name="setting">환경설정</string>
    <string name="error_placeholder">error</string>
    <string name="market_name">가게 이름</string>
    <string name="select_category">업종 선택</string>
    <string name="market_representative_image">마켓 대표 사진</string>
    <string name="market_detail_image">마켓 상세 이미지</string>
    <string name="address">주소</string>
    <string name="detail_address">상세 주소</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="item_name">상품명</string>
    <string name="item_original_price">상품 원가</string>
    <string name="item_discounted_price">상품 할인가</string>
    <string name="item_description">상품 설명(선택)</string>
    <string name="item_image">상품 사진(선택)</string>
    <string name="add_option_group">옵션 그룹 추가하기</string>
    <string name="add_option">옵션 추가하기</string>
    <string name="delete_option">옵션 삭제</string>
    <string name="item_option">상품 옵션</string>
    <string name="minimum_select_number">최소 선택 갯수</string>
    <string name="maximum_select_number">최대 선택 갯수</string>
    <string name="option_name">옵션 이름</string>
    <string name="item_state">상품 상태</string>
    <string name="item_available">판매중</string>
    <string name="remove_option_group">해당 옵션 그룹 삭제</string>
    <string name="option_additional_price">옵션 추가 요금</string>
    <string name="krw">원</string>
    <string name="change_profile">프로필 변경</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="user_name">유저 이름</string>
    <string name="inquiry_chat">문의 채팅</string>
    <string name="enter_message">메시지를 입력하세요.</string>
    <string name="manage_market">마켓 관리</string>
    <string name="manage_item">상품 관리</string>
    <string name="review_and_inquiry_chat">리뷰 및 문의 채팅</string>
    <string name="add_item_button">상품 추가 버튼</string>
    <string name="delivery_fee">배달비</string>
    <string name="open_time">영업 시간</string>
    <string name="closed_days">휴무일</string>
    <string name="phone_number">전화번호</string>
    <string name="tilde">~</string>
    <string name="no_closed_days">휴무일을 지정하지 않았습니다.</string>
    <string name="delete">삭제</string>
    <string name="add_delivery_fee">배달 요금 추가하기</string>
    <string name="id_hint"><font size="15">아이디를 입력해주세요</font></string>
    <string name="pw_hint"><font size="15">비밀번호를 입력해주세요</font></string>
    <string name="failed_to_login">로그인에 실패했습니다.</string>
    <string name="faq">자주하는질문</string>
    <string name="login">로그인</string>
    <string name="use">이용</string>
    <string name="pay">결제</string>
    <string name="review">리뷰</string>
    <string name="order">주문</string>
    <string name="etc">기타</string>
    <string name="customer_support_center">고객센터</string>
    <string name="email_inquiry">이메일로 문의하기</string>
    <string name="yu_market_customer_support_center_call">YU MARKET 고객센터(전화)</string>
    <string name="market_registration_inquiry">입점문의</string>
    <string name="with_market_corp">(주)위드마켓</string>
    <string name="use_inquiry">이용문의</string>
    <string name="send">전송</string>
    <string name="enter_contents_and_click_the_send_button">내용을 작성해 주시고 전송버튼을 눌러주세요.</string>
    <string name="enter_contents">내용을 입력해주세요.</string>
    <string name="content">내용</string>
    <string name="enter_title">제목을 입력해주세요.</string>
    <string name="title">제목</string>
    <string name="send_email">메일 보내기</string>
    <string name="with_market">위드마켓</string>
</resources>