<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/addItemNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_original_price" />

        <EditText
            android:id="@+id/addItemOriginalPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_discounted_price" />

        <EditText
            android:id="@+id/addItemDiscountedPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_stock" />

        <EditText
            android:id="@+id/addItemStockEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_state" />

        <CheckBox
            android:id="@+id/addItemAvailableCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_available"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_image" />

        <ImageView
            android:id="@+id/addItemRepresentativeImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/item_image"
            tools:src="@drawable/calendar_icon" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_description" />

        <EditText
            android:id="@+id/addItemDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_option" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addItemOptionGroupRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/addItemAddOptionGroupButton"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/add_option_group"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/interactive_color"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconTint="@color/interactive_color"
            app:strokeColor="@color/interactive_color" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/addItemConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/interactive_color"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <Button
            android:id="@+id/addItemCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/unfocused_color"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
