<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/emailBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/send_email"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:background="@color/base"
            app:layout_constraintTop_toBottomOf="@id/emailBack" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/emailBack" />

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_box"
            android:hint="@string/enter_title"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/contentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/titleEdit"
            app:layout_constraintTop_toBottomOf="@id/titleEdit" />

        <EditText
            android:id="@+id/contentEdit"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_box"
            android:hint="@string/enter_contents"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/contentName"
            app:layout_constraintTop_toBottomOf="@id/contentName"
            app:layout_constraintWidth_percent="0.85" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_contents_and_click_the_send_button"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/contentEdit"
            app:layout_constraintStart_toStartOf="@id/contentEdit"
            app:layout_constraintTop_toBottomOf="@id/contentEdit"
            app:layout_constraintWidth_percent="0.85" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:background="@drawable/circle_red"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>